--- a/scripts/review_summarizer.ipynb
+++ b/scripts/review_summarizer.ipynb
@@ -21,20 +21,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: transformers in c:\\users\\ariza\\anaconda3\\lib\\site-packages (4.23.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (2.26.0)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (0.13.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (0.10.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (5.4.1)\n",
+      "Requirement already satisfied: filelock in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (3.3.1)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (4.62.3)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (21.0)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (2021.8.3)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from transformers) (1.20.3)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from huggingface-hub<1.0,>=0.10.0->transformers) (3.10.0.2)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from packaging>=20.0->transformers) (3.0.4)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests->transformers) (2021.10.8)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests->transformers) (1.26.7)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests->transformers) (3.2)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests->transformers) (2.0.4)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: torch in c:\\users\\ariza\\anaconda3\\lib\\site-packages (1.12.1)\n",
+      "Requirement already satisfied: typing-extensions in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from torch) (3.10.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: sentencepiece in c:\\users\\ariza\\anaconda3\\lib\\site-packages (0.1.97)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting rouge-score\n",
+      "  Downloading rouge_score-0.1.2.tar.gz (17 kB)\n",
+      "  Preparing metadata (setup.py): started\n",
+      "  Preparing metadata (setup.py): finished with status 'done'\n",
+      "Requirement already satisfied: absl-py in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from rouge-score) (1.3.0)\n",
+      "Requirement already satisfied: nltk in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from rouge-score) (3.6.5)\n",
+      "Requirement already satisfied: numpy in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from rouge-score) (1.20.3)\n",
+      "Requirement already satisfied: six>=1.14.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from rouge-score) (1.16.0)\n",
+      "Requirement already satisfied: click in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from nltk->rouge-score) (8.0.3)\n",
+      "Requirement already satisfied: joblib in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from nltk->rouge-score) (1.1.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from nltk->rouge-score) (2021.8.3)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from nltk->rouge-score) (4.62.3)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from click->nltk->rouge-score) (0.4.4)\n",
+      "Building wheels for collected packages: rouge-score\n",
+      "  Building wheel for rouge-score (setup.py): started\n",
+      "  Building wheel for rouge-score (setup.py): finished with status 'done'\n",
+      "  Created wheel for rouge-score: filename=rouge_score-0.1.2-py3-none-any.whl size=24955 sha256=08d81ed32186507a800245ae6f92fd8932b2a55f6782b34662fdb8db0f565979\n",
+      "  Stored in directory: c:\\users\\ariza\\appdata\\local\\pip\\cache\\wheels\\9b\\3d\\39\\09558097d3119ca0a4d462df68f22c6f3c1b345ac63a09b86e\n",
+      "Successfully built rouge-score\n",
+      "Installing collected packages: rouge-score\n",
+      "Successfully installed rouge-score-0.1.2\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting evaluate\n",
+      "  Downloading evaluate-0.3.0-py3-none-any.whl (72 kB)\n",
+      "     ---------------------------------------- 72.9/72.9 kB 2.0 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: requests>=2.19.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (2.26.0)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (1.20.3)\n",
+      "Requirement already satisfied: huggingface-hub>=0.7.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (0.10.1)\n",
+      "Requirement already satisfied: tqdm>=4.62.1 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (4.62.3)\n",
+      "Collecting responses<0.19\n",
+      "  Downloading responses-0.18.0-py3-none-any.whl (38 kB)\n",
+      "Requirement already satisfied: fsspec[http]>=2021.05.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (2021.10.1)\n",
+      "Collecting xxhash\n",
+      "  Downloading xxhash-3.0.0-cp39-cp39-win_amd64.whl (29 kB)\n",
+      "Requirement already satisfied: packaging in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (21.0)\n",
+      "Collecting dill\n",
+      "  Downloading dill-0.3.5.1-py2.py3-none-any.whl (95 kB)\n",
+      "     ---------------------------------------- 95.8/95.8 kB ? eta 0:00:00\n",
+      "Requirement already satisfied: pandas in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from evaluate) (1.3.4)\n",
+      "Collecting multiprocess\n",
+      "  Downloading multiprocess-0.70.13-py39-none-any.whl (132 kB)\n",
+      "     -------------------------------------- 132.3/132.3 kB 3.9 MB/s eta 0:00:00\n",
+      "Collecting datasets>=2.0.0\n",
+      "  Downloading datasets-2.6.1-py3-none-any.whl (441 kB)\n",
+      "     -------------------------------------- 441.9/441.9 kB 9.2 MB/s eta 0:00:00\n",
+      "Collecting pyarrow>=6.0.0\n",
+      "  Downloading pyarrow-9.0.0-cp39-cp39-win_amd64.whl (19.6 MB)\n",
+      "     ---------------------------------------- 19.6/19.6 MB 7.2 MB/s eta 0:00:00\n",
+      "Collecting fsspec[http]>=2021.05.0\n",
+      "  Downloading fsspec-2022.8.2-py3-none-any.whl (140 kB)\n",
+      "     -------------------------------------- 140.8/140.8 kB 8.2 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from datasets>=2.0.0->evaluate) (5.4.1)\n",
+      "Collecting aiohttp\n",
+      "  Downloading aiohttp-3.8.3-cp39-cp39-win_amd64.whl (323 kB)\n",
+      "     ------------------------------------- 323.5/323.5 kB 20.9 MB/s eta 0:00:00\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.7.0->evaluate) (3.10.0.2)\n",
+      "Requirement already satisfied: filelock in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from huggingface-hub>=0.7.0->evaluate) (3.3.1)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from packaging->evaluate) (3.0.4)\n",
+      "Requirement already satisfied: charset-normalizer~=2.0.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests>=2.19.0->evaluate) (2.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests>=2.19.0->evaluate) (2021.10.8)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests>=2.19.0->evaluate) (3.2)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from requests>=2.19.0->evaluate) (1.26.7)\n",
+      "Requirement already satisfied: colorama in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from tqdm>=4.62.1->evaluate) (0.4.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from pandas->evaluate) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from pandas->evaluate) (2021.3)\n",
+      "Collecting multidict<7.0,>=4.5\n",
+      "  Downloading multidict-6.0.2-cp39-cp39-win_amd64.whl (28 kB)\n",
+      "Collecting aiosignal>=1.1.2\n",
+      "  Downloading aiosignal-1.2.0-py3-none-any.whl (8.2 kB)\n",
+      "Requirement already satisfied: attrs>=17.3.0 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from aiohttp->datasets>=2.0.0->evaluate) (21.2.0)\n",
+      "Collecting yarl<2.0,>=1.0\n",
+      "  Downloading yarl-1.8.1-cp39-cp39-win_amd64.whl (56 kB)\n",
+      "     ---------------------------------------- 56.7/56.7 kB ? eta 0:00:00\n",
+      "Collecting async-timeout<5.0,>=4.0.0a3\n",
+      "  Downloading async_timeout-4.0.2-py3-none-any.whl (5.8 kB)\n",
+      "Collecting frozenlist>=1.1.1\n",
+      "  Downloading frozenlist-1.3.1-cp39-cp39-win_amd64.whl (34 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\ariza\\anaconda3\\lib\\site-packages (from python-dateutil>=2.7.3->pandas->evaluate) (1.16.0)\n",
+      "Installing collected packages: xxhash, pyarrow, multidict, fsspec, frozenlist, dill, async-timeout, yarl, responses, multiprocess, aiosignal, aiohttp, datasets, evaluate\n",
+      "  Attempting uninstall: fsspec\n",
+      "    Found existing installation: fsspec 2021.10.1\n",
+      "    Uninstalling fsspec-2021.10.1:\n",
+      "      Successfully uninstalled fsspec-2021.10.1\n",
+      "Successfully installed aiohttp-3.8.3 aiosignal-1.2.0 async-timeout-4.0.2 datasets-2.6.1 dill-0.3.5.1 evaluate-0.3.0 frozenlist-1.3.1 fsspec-2022.8.2 multidict-6.0.2 multiprocess-0.70.13 pyarrow-9.0.0 responses-0.18.0 xxhash-3.0.0 yarl-1.8.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
-    "#%pip install transformers\n",
-    "#%pip install torch\n",
-    "#%pip install sentencepiece\n",
-    "#%pip install rouge-score\n",
-    "#%pip install evaluate"
+    "%pip install transformers\n",
+    "%pip install torch\n",
+    "%pip install sentencepiece\n",
+    "%pip install rouge-score\n",
+    "%pip install evaluate"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,12 +159,13 @@
     "import pandas as pd\n",
     "import csv\n",
     "from rouge_score import rouge_scorer, scoring\n",
-    "import evaluate"
+    "import evaluate\n",
+    "from nltk.translate.bleu_score import sentence_bleu"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,22 +232,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "predictions_df = pd.read_csv('summarized_reviews.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading builder script: 100%|██████████| 6.27k/6.27k [00:00<00:00, 612kB/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'rouge1': 0.613452605751524, 'rouge2': 0.5577686141185489, 'rougeL': 0.565767682226821, 'rougeLsum': 0.5675337655033166}\n"
+     ]
+    }
+   ],
+   "source": [
     "rouge = evaluate.load('rouge')\n",
-    "predictions_df = pd.read_csv('summarized_reviews.csv')\n",
     "predictions = predictions_df[COLUMNS_NAME[1]].tolist()\n",
     "references = predictions_df[COLUMNS_NAME[0]].tolist()\n",
     "results = rouge.compute(predictions=predictions, references=references)\n",
     "print(results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU: 0.717735\n",
+      "BLEU 1-gram: 0.891337\n",
+      "BLEU 2-gram: 0.788820\n",
+      "BLEU 3-gram: 0.669039\n",
+      "BLEU 4-gram: 0.581243\n"
+     ]
+    }
+   ],
+   "source": [
+    "def splitter(value):\n",
+    "    return value.split()\n",
+    "\n",
+    "reference = list(map(splitter, predictions_df[COLUMNS_NAME[0]].tolist()))\n",
+    "candidates = list(map(splitter, predictions_df[COLUMNS_NAME[1]].tolist()))\n",
+    "\n",
+    "# 1-gram:\n",
+    "def bleu(reference, candidates, weights=(0.25, 0.25, 0.25, 0.25)):\n",
+    "    result = 0;\n",
+    "    for candidate in candidates:\n",
+    "        result += sentence_bleu(reference, candidate, weights=weights)\n",
+    "    result = result / len(candidates)\n",
+    "    return result\n",
+    "\n",
+    "print('BLEU: %f' %bleu(reference, candidates))\n",
+    "print('BLEU 1-gram: %f' %bleu(reference, candidates, (1, 0, 0, 0)))\n",
+    "print('BLEU 2-gram: %f' %bleu(reference, candidates, (0, 1, 0, 0)))\n",
+    "print('BLEU 3-gram: %f' %bleu(reference, candidates, (0, 0, 1, 0)))\n",
+    "print('BLEU 4-gram: %f' %bleu(reference, candidates, (0, 0, 0, 1)))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -145,12 +323,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d61fbcc3117b0ac5d1a9b011a6e6e6d6b00ccf7a03e181c5c6debb2edc6bab6a"
+    "hash": "32fe028544ad451da7fd425bd970f9d43d891a9dcc481ea9112199e2f0c30cfa"
    }
   }
  },
