Clustering with sentiments 🤩

--- a/scripts/exploratory_analysis.ipynb
+++ b/scripts/exploratory_analysis.ipynb
@@ -3606,26 +3606,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "SUST_CLEAN_PATH = '../data/exploratory_analysis/tripadvisor_hotels_sustainable_clean.csv'\n",
     "\n",
     "SUST_HOTEL_CLEAN_DATA = HOTEL_DATA.loc[HOTEL_DATA['HOTEL_SUSTAINABLE']=='YES']\n",
-    "SUST_HOTEL_CLEAN_DATA.to_csv(SUST_CLEAN_PATH)"
+    "SUST_HOTEL_CLEAN_DATA.to_csv(SUST_CLEAN_PATH, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "NONSUST_CLEAN_PATH = '../data/exploratory_analysis/tripadvisor_hotels_nonsustainable_clean.csv'\n",
     "\n",
     "NONSUST_HOTEL_CLEAN_DATA = HOTEL_DATA.loc[HOTEL_DATA['HOTEL_SUSTAINABLE']=='NO']\n",
-    "NONSUST_HOTEL_CLEAN_DATA.to_csv(NONSUST_CLEAN_PATH)"
+    "NONSUST_HOTEL_CLEAN_DATA.to_csv(NONSUST_CLEAN_PATH, index=False)"
    ]
   }
  ],
