Hotel rating by year, using sentiment analysis 😍

--- a/scripts/qualitative_analysis.ipynb
+++ b/scripts/qualitative_analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,20 +64,21 @@
     "\n",
     "from nrclex import NRCLex\n",
     "from textblob import TextBlob\n",
-    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n"
+    "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "\n",
+    "import statistics"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download\n",
-    "Required for NRCLex"
+    "### Download"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,12 +99,13 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Required for NRCLex\n",
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')"
    ]
@@ -112,19 +114,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## QUALITATIVE ANALYSIS\n"
+    "### Import CSVs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "import the csv file that contains all the data"
+    "sustainable hotels and other hotels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +157,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### N-Grams"
+    "Summaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SUMMARY_FILE_PATH = '../data/review_summarizer/summarized_reviews_by_year_and_hotel.csv'\n",
+    "summary_df = pd.read_csv(SUMMARY_FILE_PATH)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## N-Grams"
    ]
   },
   {
@@ -55707,7 +55726,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sentiment"
+    "## Sentiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Normal"
    ]
   },
   {
@@ -57292,7 +57318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EXPORT"
+    "Save df into a csv"
    ]
   },
   {
@@ -57306,6 +57332,461 @@
     "\n",
     "sust_df.to_csv(SUST_OUTPUT_PATH, index=False)\n",
     "others_df.to_csv(OTHER_OUTPUT_PATH, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(from_range, to_range, value):\n",
+    "    on_decimal = to_range[0] + ( (value - from_range[0]) * (to_range[1] - to_range[0]) / (from_range[1] - from_range[0]) )\n",
+    "    return round(on_decimal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vader_analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "def vaderRating(text):\n",
+    "    compound = vader_analyzer.polarity_scores(text)[\"compound\"]\n",
+    "    return normalize((-1, 1), (1, 5), compound)\n",
+    "\n",
+    "summary_df['VADER_RATING'] = summary_df['REVIEW_SUMMARY'].apply(vaderRating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5    1561\n",
+      "4     686\n",
+      "3     289\n",
+      "2      88\n",
+      "1       2\n",
+      "Name: VADER_RATING, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summary_df['VADER_RATING'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "HIV4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hiv4 = ps.HIV4()\n",
+    "\n",
+    "def hiv4Rating(text):\n",
+    "    polarity = hiv4.get_score(hiv4.tokenize(text))['Polarity']\n",
+    "    return normalize((-1, 1), (1, 5), polarity)\n",
+    "\n",
+    "summary_df['HIV4_RATING'] = summary_df['REVIEW_SUMMARY'].apply(hiv4Rating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5    1365\n",
+      "4     749\n",
+      "3     354\n",
+      "1      92\n",
+      "2      66\n",
+      "Name: HIV4_RATING, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summary_df['HIV4_RATING'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lm = ps.LM()\n",
+    "\n",
+    "def lmRating(text):\n",
+    "    polarity = lm.get_score(lm.tokenize(text))['Polarity']\n",
+    "    return normalize((-1, 1), (1, 5), polarity)\n",
+    "\n",
+    "summary_df['LM_RATING'] = summary_df['REVIEW_SUMMARY'].apply(lmRating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5    1385\n",
+      "3     942\n",
+      "1     173\n",
+      "4     111\n",
+      "2      15\n",
+      "Name: LM_RATING, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summary_df['LM_RATING'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overallRating(row):\n",
+    "    return round( statistics.mean([row['VADER_RATING'], row['HIV4_RATING'], row['LM_RATING']]) )\n",
+    "\n",
+    "summary_df['OVERALL_RATING'] = summary_df.apply(overallRating, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5    1241\n",
+      "4     888\n",
+      "3     380\n",
+      "2     108\n",
+      "1       9\n",
+      "Name: OVERALL_RATING, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summary_df['OVERALL_RATING'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Summaries with rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HOTEL_NAME</th>\n",
+       "      <th>REVIEW_DATE</th>\n",
+       "      <th>REVIEW_SUMMARY</th>\n",
+       "      <th>VADER_RATING</th>\n",
+       "      <th>HIV4_RATING</th>\n",
+       "      <th>LM_RATING</th>\n",
+       "      <th>OVERALL_RATING</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hotel Restaurant VILLINO</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>the room (Fiamma) is a luxury, comfortable sui...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hotel Restaurant VILLINO</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>the hotel is on the outskirts of Lindau and is...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hotel Restaurant VILLINO</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>the property exceeded our expectations in ever...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Hotel Restaurant VILLINO</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>the hotel is situated in the heart of the city...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hotel Restaurant VILLINO</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>the hotel is close enough to the lake, but not...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2621</th>\n",
+       "      <td>Amadria Park Hotel Sveti Jakov</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>the couple have just spent a week in the hotel...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2622</th>\n",
+       "      <td>Amadria Park Hotel Sveti Jakov</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>the hotel was a great all-round hotel and offe...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2623</th>\n",
+       "      <td>Amadria Park Hotel Sveti Jakov</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>SV Jakov in Opatija is part of the back-Road. ...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2624</th>\n",
+       "      <td>Amadria Park Hotel Sveti Jakov</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>the only restaurant in Opatija, where we saw l...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2625</th>\n",
+       "      <td>Amadria Park Hotel Sveti Jakov</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>the hotel is by the sea, in the center of it a...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2626 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          HOTEL_NAME  REVIEW_DATE  \\\n",
+       "0           Hotel Restaurant VILLINO         2022   \n",
+       "1           Hotel Restaurant VILLINO         2020   \n",
+       "2           Hotel Restaurant VILLINO         2019   \n",
+       "3           Hotel Restaurant VILLINO         2018   \n",
+       "4           Hotel Restaurant VILLINO         2017   \n",
+       "...                              ...          ...   \n",
+       "2621  Amadria Park Hotel Sveti Jakov         2016   \n",
+       "2622  Amadria Park Hotel Sveti Jakov         2015   \n",
+       "2623  Amadria Park Hotel Sveti Jakov         2014   \n",
+       "2624  Amadria Park Hotel Sveti Jakov         2013   \n",
+       "2625  Amadria Park Hotel Sveti Jakov         2012   \n",
+       "\n",
+       "                                         REVIEW_SUMMARY  VADER_RATING  \\\n",
+       "0     the room (Fiamma) is a luxury, comfortable sui...             5   \n",
+       "1     the hotel is on the outskirts of Lindau and is...             3   \n",
+       "2     the property exceeded our expectations in ever...             4   \n",
+       "3     the hotel is situated in the heart of the city...             4   \n",
+       "4     the hotel is close enough to the lake, but not...             4   \n",
+       "...                                                 ...           ...   \n",
+       "2621  the couple have just spent a week in the hotel...             5   \n",
+       "2622  the hotel was a great all-round hotel and offe...             5   \n",
+       "2623  SV Jakov in Opatija is part of the back-Road. ...             3   \n",
+       "2624  the only restaurant in Opatija, where we saw l...             4   \n",
+       "2625  the hotel is by the sea, in the center of it a...             5   \n",
+       "\n",
+       "      HIV4_RATING  LM_RATING  OVERALL_RATING  \n",
+       "0               5          5               5  \n",
+       "1               1          3               2  \n",
+       "2               5          5               5  \n",
+       "3               5          3               4  \n",
+       "4               1          3               3  \n",
+       "...           ...        ...             ...  \n",
+       "2621            4          3               4  \n",
+       "2622            4          5               5  \n",
+       "2623            5          3               4  \n",
+       "2624            5          3               4  \n",
+       "2625            5          5               5  \n",
+       "\n",
+       "[2626 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summary_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some examples of reviews by rating"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1 bubble: the hotel is a'spa' and pool area, but it's ok. room at the lower floors with view to the sea is quite strange to see the pool - but the room is not shabby.\n",
+      "\n",
+      "2 bubbles: the hotel is on the outskirts of Lindau and is a 40min walk away. the owners are fully involved in the 5 star service.\n",
+      "\n",
+      "3 bubbles: the hotel is close enough to the lake, but not in the middle of the tourist crush. the first night was fine well cooked and presented.\n",
+      "\n",
+      "4 bubbles: the hotel is situated in the heart of the city of orchards. the gardens are separated by assorted seating and dining areas.\n",
+      "\n",
+      "5 bubbles: the room (Fiamma) is a luxury, comfortable suite. stayed here 5 nights - immaculate rooms, beautiful place to stay.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n1 bubble:', summary_df[summary_df['OVERALL_RATING'] == 1].iloc[0]['REVIEW_SUMMARY'])\n",
+    "print('\\n2 bubbles:', summary_df[summary_df['OVERALL_RATING'] == 2].iloc[0]['REVIEW_SUMMARY'])\n",
+    "print('\\n3 bubbles:', summary_df[summary_df['OVERALL_RATING'] == 3].iloc[0]['REVIEW_SUMMARY'])\n",
+    "print('\\n4 bubbles:', summary_df[summary_df['OVERALL_RATING'] == 4].iloc[0]['REVIEW_SUMMARY'])\n",
+    "print('\\n5 bubbles:', summary_df[summary_df['OVERALL_RATING'] == 5].iloc[0]['REVIEW_SUMMARY'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save df into a csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SUMMARY_OUTPUT_PATH = '../data/qualitative_analysis/sentiment/tripadvisor_hotels_summaries_sentiments.csv'\n",
+    "summary_df.to_csv(SUMMARY_OUTPUT_PATH, index=False)"
    ]
   }
  ],
