String doc 📄 (main.py)

--- a/scripts/qualitative_analysis.ipynb
+++ b/scripts/qualitative_analysis.ipynb
@@ -58476,37 +58476,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ariza\\AppData\\Local\\Temp\\ipykernel_8716\\2615316488.py:1: FutureWarning: The default value of numeric_only in DataFrame.std is deprecated. In a future version, it will default to False. In addition, specifying 'numeric_only=None' is deprecated. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-      "  join_df.std()\n"
-     ]
-    },
-    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>VADER_RATING</th>\n",
+       "      <th>HIV4_RATING</th>\n",
+       "      <th>LM_RATING</th>\n",
+       "      <th>OVERALL_RATING</th>\n",
+       "      <th>HOTEL_RATING</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2632.000000</td>\n",
+       "      <td>2632.000000</td>\n",
+       "      <td>2632.000000</td>\n",
+       "      <td>2632.000000</td>\n",
+       "      <td>2632.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.391147</td>\n",
+       "      <td>4.286854</td>\n",
+       "      <td>3.979673</td>\n",
+       "      <td>4.230813</td>\n",
+       "      <td>4.606953</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.727915</td>\n",
+       "      <td>0.922588</td>\n",
+       "      <td>1.221663</td>\n",
+       "      <td>0.787597</td>\n",
+       "      <td>0.304622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>3.500000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "REVIEW_DATE       4.189843\n",
-       "VADER_RATING      0.727915\n",
-       "HIV4_RATING       0.922588\n",
-       "LM_RATING         1.221663\n",
-       "OVERALL_RATING    0.787597\n",
-       "HOTEL_RATING      0.304622\n",
-       "dtype: float64"
+       "       VADER_RATING  HIV4_RATING    LM_RATING  OVERALL_RATING  HOTEL_RATING\n",
+       "count   2632.000000  2632.000000  2632.000000     2632.000000   2632.000000\n",
+       "mean       4.391147     4.286854     3.979673        4.230813      4.606953\n",
+       "std        0.727915     0.922588     1.221663        0.787597      0.304622\n",
+       "min        1.000000     1.000000     1.000000        1.000000      3.500000\n",
+       "25%        4.000000     3.500000     3.000000        4.000000      4.500000\n",
+       "50%        4.500000     5.000000     5.000000        4.500000      4.500000\n",
+       "75%        5.000000     5.000000     5.000000        5.000000      5.000000\n",
+       "max        5.000000     5.000000     5.000000        5.000000      5.000000"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "join_df.mean()\n",
-    "join_df.std()"
+    "join_df.loc[:, join_df.columns!='REVIEW_DATE'].describe()\n",
+    "# join_df.median()"
    ]
   },
   {
